--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "minimal",
-  "version": "0.1.0",
+  "name": "@yuxxeun/toys",
+  "license": "MIT",
+  "version": "1.0.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,18 +10,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@studio-freight/react-lenis": "^0.0.47",
+    "geist": "^1.3.0",
+    "lenis": "^1.1.1",
+    "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "typescript": "^5"
   }
 }
