--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@yuxxeun/toys",
+  "name": "@bsmnt-works/laboratory",
   "license": "MIT",
   "version": "1.0.0.1",
   "private": true,
@@ -10,12 +10,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rtbjs/network-speed-test": "^1.0.2",
     "@studio-freight/react-lenis": "^0.0.47",
     "geist": "^1.3.0",
     "lenis": "^1.1.1",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-internet-meter": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
