--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@studio-freight/react-lenis": "^0.0.47",
     "geist": "^1.3.0",
     "lenis": "^1.1.1",
+    "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
