--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "npx next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -18,6 +18,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4",
     "react-internet-meter": "^1.1.1"
   },
   "devDependencies": {
